# Qwen-Triton

./: .gitignore  README.md  pyproject.toml
docker/: ubuntu24_04.dockerfile
qwen_triton/: __init__.py
qwen_triton/configs/: __init__.py  config.py
qwen_triton/csrc/: rope_op.cpp  rope_op_kernel.cu
qwen_triton/kernels/: __init__.py  cache.py  linear_attention.py  rmsnorm.py  rope.py  sigmoid_mul.py  swiglu.py
qwen_triton/loaders/: __init__.py  hf.py
qwen_triton/models/: __init__.py  core.py
qwen_triton/modules/: __init__.py  attention.py  cache.py  linear_attention.py  mlp.py  moe.py  norms.py  rotary.py
qwen_triton/ops/: __init__.py  rope_cuda.py
qwen_triton/scripts/: benchmark_wikitext.py  build_rope_cuda_op.py  profile_backend_step.py  smoke.py  train_wikitext.py  wikitext_workload.py
tests/: test_config.py  test_kernels.py  test_model_parity.py
